--- a/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
+++ b/exercises/TD1_prise_en_main/01_prise_en_main.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TD 1: Environnement de programmation et premiers pas avec Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---\n",
     "\n",
     "## 1.Vérification de l'installation de l'environnement de programmation\n",
@@ -21,6 +14,13 @@
     "\n",
     "Ce td commence en présentiel, et la fin sera traitée dans le td à distance de la semaine prochaine.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TD 1: Environnement de programmation et premiers pas avec Python"
    ]
   },
   {
@@ -41,10 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2"
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
+   "source": [
+    "1+1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -59,10 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 1+1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -73,10 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "2"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -87,12 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2\n"
+    }
+   ],
+   "source": [
+    "print  (a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +137,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a= a+1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,12 +153,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "4"
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "source": [
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -151,12 +196,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "5 2\n"
+    }
+   ],
+   "source": [
+    "a= 5\n",
+    "b= 2\n",
+    "print (a,b)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -167,12 +222,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "2 5\n"
+    }
+   ],
+   "source": [
+    "t= a\n",
+    "a= b\n",
+    "b= t\n",
+    "print (a,b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,12 +249,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "a vaut 2 et b vaut 5\n"
+    }
+   ],
+   "source": [
+    "print(\"a vaut\", a, \"et b vaut\", b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,12 +273,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hello world\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;hello world&#39;"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "a= \"hello world\"\n",
+    "print(a)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -241,10 +333,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "bool"
+     },
+     "metadata": {},
+     "execution_count": 25
+    }
+   ],
+   "source": [
+    "# à taper une à une sinon le code ne comptera que la dernière.\n",
+    "type (5)\n",
+    "type (5.0)\n",
+    "type (\" 5 \")\n",
+    "type (-5)\n",
+    "type (5 / 2)\n",
+    "type (5 // 2)\n",
+    "type (5 == 2)\n",
+    "#type (5=2) ne peut exister car 5 et 2 ont déjà des valeurs et qu'elles ne peuvent être changées par un simple \"\"=\"\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,10 +372,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (&lt;ipython-input-34-79e9574ce07d&gt;, line 3)",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m&quot;&lt;ipython-input-34-79e9574ce07d&gt;&quot;\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    type {5, 2}\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "type (5, 2)\n",
+    "type [5, 2]\n",
+    "type {5, 2}\n",
+    "# chelou mais normal selon les autres"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,12 +402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "le type de x est  &lt;class &#39;int&#39;&gt;\n"
+    }
+   ],
+   "source": [
+    "x = 3\n",
+    "print (\"le type de x est \", type (x))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -296,10 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "v = 116\n",
+    "#test\n",
+    "c = 24"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -312,12 +450,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "116 = 10 x 11 + 6\n6\n"
+    }
+   ],
+   "source": [
+    "print (v, '=', v//11, 'x', 11,'+', v%11 )\n",
+    "#test\n",
+    "c = c//4\n",
+    "print (c)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -331,10 +480,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 84,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "10.0\n9\n10\n"
+    }
+   ],
+   "source": [
+    "k = 3 * (10 / 3)\n",
+    "print (k)\n",
+    "\n",
+    "p = 3 * (10 // 3)\n",
+    "print (p)\n",
+    "\n",
+    "l = (3 * 10) // 3\n",
+    "print (l) "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,12 +519,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 98
+    }
+   ],
+   "source": [
+    "e = 88\n",
+    "#print (e%2)\n",
+    "e%2 == 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -369,12 +548,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "115792089237316195423570985008687907853269984665640564039457584007913129639936"
+     },
+     "metadata": {},
+     "execution_count": 100
+    }
+   ],
+   "source": [
+    "2**256"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -409,12 +599,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "True"
+     },
+     "metadata": {},
+     "execution_count": 104
+    }
+   ],
+   "source": [
+    "0.2 + 0.4 > 0.6\n",
+    "# Supérieur uniquement"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -425,12 +627,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "0.1\n"
+    }
+   ],
+   "source": [
+    "x = 0.1\n",
+    "x = x*2**30\n",
+    "int (x)\n",
+    "x = x/2**30\n",
+    "print (x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -464,14 +678,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hello world\nworldhello\n"
+    }
+   ],
    "source": [
     "a = \"hello\"\n",
-    "b = 'world'"
+    "b = 'world'\n",
+    "print (a, b)\n",
+    "print (b + a)"
    ]
   },
   {
@@ -492,12 +714,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "hellohellohello\nhelloworldhelloworld\n"
+    }
+   ],
+   "source": [
+    "print (a * 3)\n",
+    "print((a+b) *2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -508,10 +739,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;HELLO&#39;"
+     },
+     "metadata": {},
+     "execution_count": 150
+    }
+   ],
+   "source": [
+    "a.upper()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -524,10 +766,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 152,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;hello&#39;"
+     },
+     "metadata": {},
+     "execution_count": 152
+    }
+   ],
+   "source": [
+    "a\n",
+    "#non"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -538,12 +792,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 155,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "False"
+     },
+     "metadata": {},
+     "execution_count": 155
+    }
+   ],
+   "source": [
+    "a > b\n",
+    "#nb de caractère ou \"\" différent de ''"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -568,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {
     "tags": []
    },
@@ -586,12 +852,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "64"
+     },
+     "metadata": {},
+     "execution_count": 192
+    }
+   ],
+   "source": [
+    "int (a)*2\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -602,12 +879,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "&#39;m&#39;"
+     },
+     "metadata": {},
+     "execution_count": 204
+    }
+   ],
+   "source": [
+    "s = input (\"Tape quelquechose au clavier\")\n",
+    "s"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -618,12 +907,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "8"
+     },
+     "metadata": {},
+     "execution_count": 213
+    }
+   ],
+   "source": [
+    "q = int(input (\"Nb à entrer\"))*2\n",
+    "q"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -634,12 +935,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 220,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "30"
+     },
+     "metadata": {},
+     "execution_count": 220
+    }
+   ],
+   "source": [
+    "o = int(input(\"Âge en 2020\"))+ 11\n",
+    "o\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -728,7 +1041,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
